[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Stacked pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Count/borderCountPoint.png" type="Texture" id=2]
[ext_resource path="res://Script/DrawCard.gd" type="Script" id=3]
[ext_resource path="res://Script/StartedGame.gd" type="Script" id=4]
[ext_resource path="res://Assets/Count/borderCountPoinBgt.png" type="Texture" id=5]
[ext_resource path="res://Script/myCountBar.gd" type="Script" id=6]
[ext_resource path="res://Assets/Count/borderCountPoinBgRed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Timer/timer.png" type="Texture" id=8]
[ext_resource path="res://Assets/Timer/timerbg.png" type="Texture" id=9]
[ext_resource path="res://Script/Timer.gd" type="Script" id=10]
[ext_resource path="res://Script/EnemyTimer.gd" type="Script" id=11]
[ext_resource path="res://Assets/health/healthbg.png" type="Texture" id=12]
[ext_resource path="res://Assets/health/healthcolor.png" type="Texture" id=13]
[ext_resource path="res://Script/My/Health.gd" type="Script" id=14]
[ext_resource path="res://Script/Enemy/Health.gd" type="Script" id=15]
[ext_resource path="res://Assets/CardDeck2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Individual icons (48x48)/56-export.png" type="Texture" id=17]
[ext_resource path="res://Script/Lock.gd" type="Script" id=18]
[ext_resource path="res://Script/Enemy/DrawEnemy.gd" type="Script" id=19]
[ext_resource path="res://Assets/Mana/mana.png" type="Texture" id=20]
[ext_resource path="res://Assets/Mana/manacolor.png" type="Texture" id=21]
[ext_resource path="res://Script/My/mana.gd" type="Script" id=22]
[ext_resource path="res://Script/Enemy/mana.gd" type="Script" id=23]
[ext_resource path="res://Screen/NFT.tscn" type="PackedScene" id=24]

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 19
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 39
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("shuffleCard:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "shuffle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("shuffleCard:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 205 ), Vector2( 0, 0 ) ]
}

[node name="StartGame" type="Node2D"]
position = Vector2( 514, 305 )
script = ExtResource( 4 )

[node name="EnemyUI" type="Control" parent="."]
margin_left = -509.0
margin_top = -299.0
margin_right = 511.0
margin_bottom = 302.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TimerEnemy" type="Control" parent="EnemyUI"]
margin_left = 344.0
margin_top = 240.0
margin_right = 679.0
margin_bottom = 257.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerProgressBarEnemy" type="TextureProgress" parent="EnemyUI/TimerEnemy"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.5
margin_top = -15.5
margin_right = 292.5
margin_bottom = 20.5
rect_scale = Vector2( 0.74, 0.635 )
max_value = 60.0
value = 60.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountBar" type="Control" parent="EnemyUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -47.5
margin_right = 192.0
margin_bottom = 4.5
rect_rotation = -360.0
rect_pivot_offset = Vector2( 0, 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderCountPoint" type="Sprite" parent="EnemyUI/CountBar"]
position = Vector2( 194, 25 )
texture = ExtResource( 2 )

[node name="enemyCountBar" type="TextureProgress" parent="EnemyUI/CountBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -20.0
margin_right = 172.0
margin_bottom = 20.0
max_value = 96.0
texture_progress = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnemyUI/CountBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -32.5
margin_right = 24.0
margin_bottom = -6.5
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawEnemy" type="TextureButton" parent="EnemyUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -184.0
margin_top = 39.0
margin_right = -48.0
margin_bottom = 227.0
texture_normal = ExtResource( 16 )
expand = true
flip_h = true
flip_v = true
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="EnemyUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -204.5
margin_top = 87.0
margin_right = 204.5
margin_bottom = 116.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthProgress" type="TextureProgress" parent="EnemyUI/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -20.0
margin_right = 257.0
margin_bottom = 20.0
rect_scale = Vector2( 0.891, 1 )
max_value = 30.0
value = 30.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 13 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnemyUI/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -24.5
margin_right = 20.5
margin_bottom = -4.5
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana" type="Control" parent="EnemyUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.0
margin_top = 51.0
margin_right = 203.0
margin_bottom = 75.0
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaProgress" type="TextureProgress" parent="EnemyUI/mana"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.5
margin_top = -11.0
margin_right = 259.5
margin_bottom = 29.0
rect_scale = Vector2( 0.897, 0.619 )
max_value = 20.0
value = 20.0
texture_under = ExtResource( 20 )
texture_progress = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnemyUI/mana"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.5
margin_top = -18.0
margin_right = 11.5
custom_fonts/font = SubResource( 4 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyUI" type="Control" parent="."]
margin_left = -512.0
margin_top = -304.0
margin_right = 508.0
margin_bottom = 297.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerMy" type="Control" parent="MyUI"]
margin_left = 344.0
margin_top = 349.0
margin_right = 679.0
margin_bottom = 366.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerProgressBarMy" type="TextureProgress" parent="MyUI/TimerMy"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.5
margin_top = -15.5
margin_right = 294.5
margin_bottom = 20.5
rect_scale = Vector2( 0.74, 0.635 )
max_value = 60.0
value = 60.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountBar" type="Control" parent="MyUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -5.0
margin_right = 195.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderCountPoint" type="Sprite" parent="MyUI/CountBar"]
position = Vector2( 194, 25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MyUI/CountBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = 3.5
margin_right = 24.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="myCountBar" type="TextureProgress" parent="MyUI/CountBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -20.0
margin_right = 172.0
margin_bottom = 20.0
max_value = 96.0
texture_progress = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="MyUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -194.0
margin_top = -121.0
margin_right = 215.0
margin_bottom = -92.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthProgress" type="TextureProgress" parent="MyUI/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -20.0
margin_right = 257.0
margin_bottom = 20.0
rect_scale = Vector2( 0.891, 1 )
max_value = 30.0
value = 30.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MyUI/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -1.5
margin_right = 20.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawCard" type="TextureButton" parent="MyUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = -218.0
margin_right = 188.0
margin_bottom = -30.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shuffleCard" type="TextureRect" parent="MyUI/DrawCard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.000442505
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MyUI/DrawCard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -20.0
margin_right = 22.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0745098, 0.164706, 0.337255, 1 )
custom_fonts/font = SubResource( 2 )
text = "52"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MyUI/DrawCard"]
anims/RESET = SubResource( 5 )
anims/shuffle = SubResource( 6 )

[node name="Lock" type="Control" parent="MyUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -183.0
margin_top = -187.0
margin_right = -26.0
margin_bottom = -44.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MyUI/Lock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -49.5
margin_right = 47.5
margin_bottom = 49.5
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana" type="Control" parent="MyUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -85.0
margin_right = 217.0
margin_bottom = -61.0
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaProgress" type="TextureProgress" parent="MyUI/mana"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -12.0
margin_right = 254.0
margin_bottom = 28.0
rect_scale = Vector2( 0.896, 0.619 )
max_value = 20.0
value = 20.0
texture_under = ExtResource( 20 )
texture_progress = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MyUI/mana"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -1.0
margin_right = 7.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NFT" parent="MyUI" instance=ExtResource( 24 )]

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 60.0

[connection signal="enemyCountChangeSignal" from="." to="EnemyUI/TimerEnemy" method="_on_StartGame_enemyCountChangeSignal"]
[connection signal="enemyCountChangeSignal" from="." to="EnemyUI/CountBar/enemyCountBar" method="_on_StartGame_enemyCountChangeSignal"]
[connection signal="enemyCountChangeSignal" from="." to="EnemyUI/Health" method="_on_StartGame_enemyCountChangeSignal"]
[connection signal="syncTime" from="." to="EnemyUI/TimerEnemy" method="_on_StartGame_syncTime"]
[connection signal="changeEnemyCountBar" from="EnemyUI/Health" to="EnemyUI/CountBar/enemyCountBar" method="_on_Health_changeEnemyCountBar"]
[connection signal="changeMyCountBar" from="EnemyUI/Health" to="MyUI/CountBar/myCountBar" method="_on_Health_changeMyCountBar"]
[connection signal="checkDrawNft" from="EnemyUI/Health" to="MyUI/NFT" method="_on_Health_checkDrawNft"]
[connection signal="endTurnMana" from="EnemyUI/Health" to="EnemyUI/mana" method="_on_Health_endTurnMana"]
[connection signal="endTurnMana" from="EnemyUI/Health" to="MyUI/mana" method="_on_Health_endTurnMana"]
[connection signal="myCountValue" from="MyUI/TimerMy" to="MyUI/CountBar/myCountBar" method="_on_TimerMy_myCountValue"]
[connection signal="myCountValue" from="MyUI/TimerMy" to="MyUI/Health" method="_on_TimerMy_myCountValue"]
[connection signal="changeEnemyCountBar" from="MyUI/Health" to="EnemyUI/CountBar/enemyCountBar" method="_on_Health_changeEnemyCountBar"]
[connection signal="changeMyCountBar" from="MyUI/Health" to="MyUI/CountBar/myCountBar" method="_on_Health_changeMyCountBar"]
[connection signal="checkDrawNft" from="MyUI/Health" to="MyUI/NFT" method="_on_Health_checkDrawNft"]
[connection signal="endTurnMana" from="MyUI/Health" to="EnemyUI/mana" method="_on_Health_endTurnMana"]
[connection signal="endTurnMana" from="MyUI/Health" to="MyUI/mana" method="_on_Health_endTurnMana"]
[connection signal="myCountValue" from="MyUI/DrawCard" to="MyUI/TimerMy" method="_on_DrawCard_myCountValue"]
[connection signal="myCountValue" from="MyUI/DrawCard" to="MyUI/CountBar/myCountBar" method="_on_DrawCard_myCountValue"]
[connection signal="myCountValue" from="MyUI/DrawCard" to="MyUI/Health" method="_on_DrawCard_myCountValue"]
[connection signal="pressed" from="MyUI/DrawCard" to="MyUI/DrawCard" method="_on_DrawCard_pressed"]
[connection signal="lock" from="MyUI/Lock" to="MyUI/Health" method="_on_Lock_lock"]
[connection signal="pressed" from="MyUI/Lock/TextureButton" to="MyUI/Lock" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="MyUI/TimerMy" method="_on_Timer_timeout"]
